Fix header height on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,14 +37,14 @@ h5 {
   text-align: center; }
 
 .header {
-  height: 10%;
+  height: 12%;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1; }
   .header .navbar {
-    height: 10%; }
+    height: 12%; }
   .header .navbar-text {
     margin-bottom: 0;
     padding-top: 0.25rem;
@@ -67,18 +67,14 @@ h5 {
   .header .city-search {
     font-family: 'Open Sans', 'FontAwesome'; }
   @media (min-width: 768px) and (max-width: 991px) {
-    .header {
-      height: 12%; }
-      .header .navbar {
-        height: 12%; }
-      .header .navbar .form-control {
-        width: 40%;
-        font-size: 0.8rem;
-        line-height: 0.8rem;
-        padding: .2rem .75rem;
-        text-align: center; }
-      .header .navbar-text {
-        margin-bottom: 1.5rem; } }
+    .header .navbar .form-control {
+      width: 40%;
+      font-size: 0.8rem;
+      line-height: 0.8rem;
+      padding: .2rem .75rem;
+      text-align: center; }
+    .header .navbar-text {
+      margin-bottom: 1.5rem; } }
   @media (min-width: 992px) {
     .header {
       height: 15%;
